# cryptoe

./: .env  .gitignore  Cargo.toml  docker-compose.yml  load_exchanges.py  load_tickers.py  test.py
deprecated/: load_conditions.py  load_tickers.py  load_trades.py
deprecated/sql/: conditions.sql  tickers.sql  trades.sql
sql/: exchanges.sql  trades.sql
src/: config.rs  main.rs  process_files.rs
