[package]
name = "ohlcv_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.39.2", features = ["lazy", "parquet", "temporal", "dtype-full"] }
object_store = { version = "0.9.0", features = ["aws"] }
tokio = { version = "1.37.0", features = ["full"] }
dotenv = "0.15.0"
anyhow = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.9.0"

[dev-dependencies]
anyhow = "1.0"
