[package]
name = "cryptoe"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
dotenv = "0.15.0"
object_store = { version = "0.11.2", features = ["aws", "gcp"] }
polars = { version = "0.46.0", features = ["parquet", "csv", "polars-io"] }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.31"
flate2 = "1.1.0"
chrono = "0.4.40"
